Clean up markdown in Data Collection notebook

--- a/jupyter_notebooks/01 - DataCollection.ipynb
+++ b/jupyter_notebooks/01 - DataCollection.ipynb
@@ -17,19 +17,19 @@
       "source": [
         "## Objectives\n",
         "\n",
-        "* Write here your notebook objective, for example, \"Fetch data from Kaggle and save as raw data\", or \"engineer features for modelling\"\n",
+        "* Check for Kaggle authentification and fetch dataset from Kaggle. Save as raw data in extracted csv file.\n",
         "\n",
         "## Inputs\n",
         "\n",
-        "* Write here which data or information you need to run the notebook \n",
+        "* Android_Malware.csv\n",
         "\n",
         "## Outputs\n",
         "\n",
-        "* Write here which files, code or artefacts you generate by the end of the notebook \n",
+        "* None\n",
         "\n",
         "## Additional Comments\n",
         "\n",
-        "* In case you have any additional comments that don't fit in the previous bullets, please state them here. \n"
+        "* The dataset is originally saved as a zip file when fetching from Kaggle. This zip file is then extracted before being deleted. For a certain part of the code, the zip file is part of the needed inputs for running the code. This is obsolete after extracting and saving the file as csv.\n"
       ]
     },
     {
@@ -56,8 +56,8 @@
         "id": "aOGIGS-uz3i2"
       },
       "source": [
-        "We need to change the working directory from its current folder to its parent folder\n",
-        "* We access the current directory with os.getcwd()"
+        "Change the working directory from its current folder to its parent folder\n",
+        "* Access the current directory with os.getcwd()"
       ]
     },
     {
@@ -80,7 +80,7 @@
         "id": "9MWW8E7lz3i7"
       },
       "source": [
-        "We want to make the parent of the current directory the new current directory\n",
+        "Make the parent of the current directory the new current directory\n",
         "* os.path.dirname() gets the parent directory\n",
         "* os.chir() defines the new current directory"
       ]
@@ -133,14 +133,28 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* Drag kaggle.json file into root directory"
+        "* In this section, the chosen dataset is fetched via Kaggle API as a zip file. The zip file is then extracted as a csv file and deleted. Authentification for Kaggle is also deleted as it is no longer needed. "
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* Check for kaggle.json file to allow authentication"
+        "Setup for Kaggle authentification"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "* Check local machine for kaggle.json file to allow authentication"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "* Drag kaggle.json file into root directory"
       ]
     },
     {
@@ -164,7 +178,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* The following dataset is used in this project: [Kaggle Android Malware Detection URL](https://www.kaggle.com/datasets/subhajournal/android-malware-detection)"
+        "The following dataset is used in this project: [Kaggle Android Malware Detection URL](https://www.kaggle.com/datasets/subhajournal/android-malware-detection)"
       ]
     },
     {
@@ -239,6 +253,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "* In this section, the dataset is loaded and inspected to check that collecting and extracting the dataset works as expected."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "Load the dataset and get overview of first to rows"
       ]
     },
@@ -271,49 +292,6 @@
       "outputs": [],
       "source": [
         "df.info()"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "Check for missing values in all columns"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "df.isnull().sum()"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "---"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "NOTE"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "* You may add as many sections as you want, as long as it supports your project workflow.\n",
-        "* All notebook's cells should be run top-down (you can't create a dynamic wherein a given point you need to go back to a previous cell to execute some task, like go back to a previous cell and refresh a variable content)"
       ]
     },
     {
