Set up Exploratory Data Analysis Notebook

--- a/jupyter_notebooks/02 - ExploratoryDataAnalysis.ipynb
+++ b/jupyter_notebooks/02 - ExploratoryDataAnalysis.ipynb
@@ -6,7 +6,7 @@
         "id": "0aStgWSO0E0E"
       },
       "source": [
-        "# **(ADD HERE THE NOTEBOOK NAME)**"
+        "# **Exploratory Data Analysis Notebook**"
       ]
     },
     {
@@ -17,11 +17,11 @@
       "source": [
         "## Objectives\n",
         "\n",
-        "* Write here your notebook objective, for example, \"Fetch data from Kaggle and save as raw data\", or \"engineer features for modelling\"\n",
+        "* Inspect and understand the dataset via Exploratory Data Analysis. Check Data Types, Missing Data, Variables and Correlations. Perform statistic analysis to gain insight into data.\n",
         "\n",
         "## Inputs\n",
         "\n",
-        "* Write here which data or information you need to run the notebook \n",
+        "* Android_Malware.csv\n",
         "\n",
         "## Outputs\n",
         "\n",
@@ -56,8 +56,8 @@
         "id": "aOGIGS-uz3i2"
       },
       "source": [
-        "We need to change the working directory from its current folder to its parent folder\n",
-        "* We access the current directory with os.getcwd()"
+        "Change the working directory from its current folder to its parent folder\n",
+        "* Access the current directory with os.getcwd()"
       ]
     },
     {
@@ -80,7 +80,7 @@
         "id": "9MWW8E7lz3i7"
       },
       "source": [
-        "We want to make the parent of the current directory the new current directory\n",
+        "Make the parent of the current directory the new current directory\n",
         "* os.path.dirname() gets the parent directory\n",
         "* os.chir() defines the new current directory"
       ]
@@ -126,14 +126,21 @@
         "id": "-mavJ8DibrcQ"
       },
       "source": [
-        "# Section 1"
+        "# Import Libraries and Load Dataset"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Section 1 content"
+        "In this section, all necessary standard libaries are imported to allow using their functions. The dataset is loaded to be able to access necessary data."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Import Libraries with necessary Settings"
       ]
     },
     {
@@ -141,7 +148,33 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "# Standard libraries\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "\n",
+        "# Settings\n",
+        "%matplotlib inline\n",
+        "sns.set(style=\"whitegrid\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Load Dataset from Inputs"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df = pd.read_csv(\"inputs/datasets/raw/Android_Malware.csv\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -158,14 +191,21 @@
         "id": "uFQo3ycuO-v6"
       },
       "source": [
-        "# Section 2"
+        "# Create Pandas Profiling Report"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Section 2 content"
+        "In this section, a pandas profiling report is created via ydata_profiling. The report serves as a general overview for the whole dataset and is saved as a pdf for future reference."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Import ydata_profiling and create and save Pandas Profile Report"
       ]
     },
     {
@@ -173,7 +213,27 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "!pip show ipywidgets"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Import Library\n",
+        "from ydata_profiling import ProfileReport\n",
+        "\n",
+        "# Create Profiling Report\n",
+        "profile = ProfileReport(df=df, explorative=True)\n",
+        "profile.to_notebook_iframe()\n",
+        "\n",
+        "# Save Report in Outputs Folder (create if not existing)\n",
+        "os.makedirs(\"outputs/eda\", exist_ok=True)\n",
+        "profile.to_file(\"outputs/eda/EDA_Report.html\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -245,11 +305,9 @@
       "provenance": [],
       "toc_visible": true
     },
-    "interpreter": {
-      "hash": "8b8334dab9339717f727a1deaf837b322d7a41c20d15cc86be99a8e69ceec8ce"
-    },
     "kernelspec": {
-      "display_name": "Python 3.8.12 64-bit ('3.8.12': pyenv)",
+      "display_name": ".venv",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
@@ -262,7 +320,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.12 (default, Nov  7 2022, 16:45:55) \n[GCC 9.4.0]"
+      "version": "3.12.8"
     },
     "orig_nbformat": 2
   },
