Build and analyse Pandas Profiling Report in EDA notebook

--- a/jupyter_notebooks/02 - ExploratoryDataAnalysis.ipynb
+++ b/jupyter_notebooks/02 - ExploratoryDataAnalysis.ipynb
@@ -191,14 +191,14 @@
         "id": "uFQo3ycuO-v6"
       },
       "source": [
-        "# Create Pandas Profiling Report"
+        "# Pandas Profiling Report"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "In this section, a pandas profiling report is created via ydata_profiling. The report serves as a general overview for the whole dataset and is saved as a pdf for future reference."
+        "In this section, a pandas profiling report is created via ydata_profiling. The report serves as a general overview for the whole dataset and is saved in outputs folder for future reference."
       ]
     },
     {
@@ -214,25 +214,31 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "!pip show ipywidgets"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
         "# Import Library\n",
         "from ydata_profiling import ProfileReport\n",
         "\n",
         "# Create Profiling Report\n",
-        "profile = ProfileReport(df=df, explorative=True)\n",
+        "profile = ProfileReport(df=df, minimal=True)\n",
         "profile.to_notebook_iframe()\n",
         "\n",
         "# Save Report in Outputs Folder (create if not existing)\n",
         "os.makedirs(\"outputs/eda\", exist_ok=True)\n",
         "profile.to_file(\"outputs/eda/EDA_Report.html\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "* The report shows detailed information about all variables. It allows to clearly identify the target variable - the label column.\n",
+        "\n",
+        "* The label column has four different values: android_sms_malware, android_adware, android_scareware and benign. These describe the class / category of each sample in the dataset. \n",
+        "\n",
+        "* Project Goal: Create a classification model to predict the label based on the features.\n",
+        "\n",
+        "* The other columns are potential input features that can be used for training the model. \n",
+        "\n",
+        "* Further study of missing values, data types and correlation is needed to see which features are useful for a prediction model for the label target variable."
       ]
     },
     {
@@ -246,16 +252,61 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "NOTE"
+        "# General Data Exploration"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* You may add as many sections as you want, as long as it supports your project workflow.\n",
-        "* All notebook's cells should be run top-down (you can't create a dynamic wherein a given point you need to go back to a previous cell to execute some task, like go back to a previous cell and refresh a variable content)"
+        "Get general overview of dataset"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df.info()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Check for missing values in all columns"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df.isnull().sum()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Correlation Study"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -270,7 +321,7 @@
         "id": "ltNetd085qHf"
       },
       "source": [
-        "# Push files to Repo"
+        "# Conclusion and Next Steps"
       ]
     },
     {
@@ -278,23 +329,6 @@
       "metadata": {},
       "source": [
         "* In case you don't need to push files to Repo, you may replace this section with \"Conclusions and Next Steps\" and state your conclusions and next steps."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "aKlnIozA4eQO",
-        "outputId": "fd09bc1f-adb1-4511-f6ce-492a6af570c0"
-      },
-      "outputs": [],
-      "source": [
-        "import os\n",
-        "try:\n",
-        "  # create here your folder\n",
-        "  # os.makedirs(name='')\n",
-        "except Exception as e:\n",
-        "  print(e)\n"
       ]
     }
   ],
