Convert dataframe to all numeric values for further analysis in EDA notebook

--- a/jupyter_notebooks/02 - ExploratoryDataAnalysis.ipynb
+++ b/jupyter_notebooks/02 - ExploratoryDataAnalysis.ipynb
@@ -187,6 +187,45 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# General Data Exploration"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Get general overview of dataset"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df.info()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "* The first inspection shows, that there are some columns that have an object data type. For further analysis, this needs to be converted to numeric.\n",
+        "\n",
+        "* The expected target variable - Label - is also an object. This needs to be converted as well. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "uFQo3ycuO-v6"
       },
@@ -252,14 +291,21 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# General Data Exploration"
+        "# Data Preparation"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Get general overview of dataset"
+        "In this section, "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Check all columns to see naming and formatting issues"
       ]
     },
     {
@@ -268,14 +314,14 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "df.info()"
+        "df.columns.tolist()"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Check for missing values in all columns"
+        "Clean column names to avoid hidden spaces"
       ]
     },
     {
@@ -284,7 +330,174 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "df.isnull().sum()"
+        "df.columns = df.columns.str.strip()\n",
+        "df.columns.tolist()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Encode target variable Label and remove after encoding"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from sklearn.preprocessing import LabelEncoder\n",
+        "\n",
+        "le = LabelEncoder()\n",
+        "df['Label_encoded'] = le.fit_transform(df['Label'])\n",
+        "\n",
+        "# Print label mapping\n",
+        "label_mapping = dict(zip(le.classes_, le.transform(le.classes_)))\n",
+        "print(\"🎯 Label mapping (target encoding):\")\n",
+        "print(label_mapping)\n",
+        "\n",
+        "# Drop original Label column after encoding\n",
+        "df.drop(columns=['Label'], inplace=True)\n",
+        "print(\"🗑️ Dropped original 'Label' column after encoding.\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Convert malformed numeric object columns to numeric & show results of conversion"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Identify original object columns\n",
+        "original_obj_cols = df.select_dtypes(include='object').columns.tolist()\n",
+        "converted_cols = []\n",
+        "\n",
+        "for col in original_obj_cols:\n",
+        "    try:\n",
+        "        df[col] = pd.to_numeric(df[col])\n",
+        "        converted_cols.append(col)\n",
+        "    except ValueError:\n",
+        "        pass  # Leave it as object if conversion fails\n",
+        "\n",
+        "# Show conversion results\n",
+        "remaining_obj_cols = df.select_dtypes(include='object').columns.tolist()\n",
+        "print(\"\\n✅ Successfully converted to numeric:\")\n",
+        "print(converted_cols)\n",
+        "\n",
+        "print(\"\\n❌ Still categorical or string (object):\")\n",
+        "print(remaining_obj_cols)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Check column values for suspicious looking numeric columns"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Get only relevant columns\n",
+        "suspected_numeric = ['CWE Flag Count', 'Down/Up Ratio', 'Fwd Avg Bytes/Bulk']\n",
+        "\n",
+        "# Preview unique values to spot issues\n",
+        "for col in suspected_numeric:\n",
+        "    print(f\"\\n🔍 Unique values in '{col}':\")\n",
+        "    print(df[col].unique()[:10])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Convert unique values of object columns to NaN / numeric"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "cols_to_clean = ['CWE Flag Count', 'Down/Up Ratio', 'Fwd Avg Bytes/Bulk']\n",
+        "\n",
+        "# Convert to numeric (coerce errors to NaN)\n",
+        "for col in cols_to_clean:\n",
+        "    df[col] = pd.to_numeric(df[col], errors='coerce')\n",
+        "\n",
+        "print(\"\\n✅ Finished converting suspicious numeric columns.\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Drop unhelpful metadata object columns"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "columns_to_drop = ['Flow ID', 'Source IP', 'Destination IP', 'Timestamp']\n",
+        "df.drop(columns=columns_to_drop, axis=1, inplace=True)\n",
+        "\n",
+        "print(\"\\n🗑️ Dropped unhelpful metadata columns.\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Final check for remaining object columns"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "final_obj_cols = df.select_dtypes(include='object').columns.tolist()\n",
+        "print(\"\\n Final object columns (categorical candidates):\")\n",
+        "print(final_obj_cols)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Save converted dataframe as a copy to keep original one intact & save as csv file for easier access"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Make copy of dataframe for further use and easier separation\n",
+        "df_converted = df.copy()\n",
+        "\n",
+        "# Save converted dataframe as csv file for easier later access of converted data\n",
+        "os.makedirs(\"outputs/data\", exist_ok=True)\n",
+        "df_converted.to_csv(\"outputs/data/Android_Malware_converted.csv\", index=False)\n",
+        "\n",
+        "print(\"✅ Saved converted dataframe as copy of original\")\n",
+        "print(\"✅ Saved converted dataframe to outputs/data/\")"
       ]
     },
     {
@@ -300,13 +513,6 @@
       "source": [
         "# Correlation Study"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
     },
     {
       "cell_type": "markdown",
@@ -328,7 +534,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* In case you don't need to push files to Repo, you may replace this section with \"Conclusions and Next Steps\" and state your conclusions and next steps."
+        "* "
       ]
     }
   ],
