Add Correlation Study and Data Quality Analysis to EDA notebook

--- a/jupyter_notebooks/02 - ExploratoryDataAnalysis.ipynb
+++ b/jupyter_notebooks/02 - ExploratoryDataAnalysis.ipynb
@@ -25,7 +25,8 @@
         "\n",
         "## Outputs\n",
         "\n",
-        "* Write here which files, code or artefacts you generate by the end of the notebook \n",
+        "* EDA_Report.html\n",
+        "* Android_Malware_converted.csv\n",
         "\n",
         "## Additional Comments\n",
         "\n",
@@ -51,73 +52,18 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "aOGIGS-uz3i2"
-      },
-      "source": [
-        "Change the working directory from its current folder to its parent folder\n",
-        "* Access the current directory with os.getcwd()"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "wZfF_j-Bz3i4",
-        "outputId": "66943449-1436-4c3d-85c7-b85f9f78349b"
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "import os\n",
-        "current_dir = os.getcwd()\n",
-        "current_dir"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "9MWW8E7lz3i7"
-      },
-      "source": [
-        "Make the parent of the current directory the new current directory\n",
-        "* os.path.dirname() gets the parent directory\n",
-        "* os.chir() defines the new current directory"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "TwHsQRWjz3i9",
-        "outputId": "86849db3-cd2f-4cc5-ebb8-2d0caafa1a2c"
-      },
-      "outputs": [],
-      "source": [
-        "os.chdir(os.path.dirname(current_dir))\n",
-        "print(\"You set a new current directory\")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "M_xPk_Ijz3i-"
-      },
-      "source": [
-        "Confirm the new current directory"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "vz3S-_kjz3jA",
-        "outputId": "00b79ae4-75d0-4a96-d193-ac9ef9847ea2"
-      },
-      "outputs": [],
-      "source": [
-        "current_dir = os.getcwd()\n",
-        "current_dir"
+        "from pathlib import Path\n",
+        "\n",
+        "# Resolve the project root\n",
+        "project_root = Path.cwd()\n",
+        "if project_root.name == \"jupyter_notebooks\":\n",
+        "    project_root = project_root.parent"
       ]
     },
     {
@@ -126,14 +72,14 @@
         "id": "-mavJ8DibrcQ"
       },
       "source": [
-        "# Import Libraries and Load Dataset"
+        "# Import Libraries"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "In this section, all necessary standard libaries are imported to allow using their functions. The dataset is loaded to be able to access necessary data."
+        "In this section, all necessary standard libaries are imported to allow using their functions."
       ]
     },
     {
@@ -164,6 +110,20 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "# Load Raw Dataset"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "In this section, the raw dataset is loaded to be able to access the data."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "Load Dataset from Inputs"
       ]
     },
@@ -173,7 +133,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "df = pd.read_csv(\"inputs/datasets/raw/Android_Malware.csv\")"
+        "df = pd.read_csv(Path.cwd().parent / \"inputs\" / \"datasets\" / \"raw\" / \"Android_Malware.csv\")"
       ]
     },
     {
@@ -262,7 +222,7 @@
         "\n",
         "# Save Report in Outputs Folder (create if not existing)\n",
         "os.makedirs(\"outputs/eda\", exist_ok=True)\n",
-        "profile.to_file(\"outputs/eda/EDA_Report.html\")"
+        "profile.to_file(Path.cwd().parent / \"outputs\" / \"eda\" / \"EDA_Report.html\")"
       ]
     },
     {
@@ -443,7 +403,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Drop unhelpful metadata object columns"
+        "Drop unhelpful metadata and index object columns"
       ]
     },
     {
@@ -452,10 +412,10 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "columns_to_drop = ['Flow ID', 'Source IP', 'Destination IP', 'Timestamp']\n",
+        "columns_to_drop = ['Flow ID', 'Source IP', 'Destination IP', 'Timestamp', 'Unnamed: 0']\n",
         "df.drop(columns=columns_to_drop, axis=1, inplace=True)\n",
         "\n",
-        "print(\"\\n🗑️ Dropped unhelpful metadata columns.\")"
+        "print(\"\\n🗑️ Dropped unhelpful metadata and index columns.\")"
       ]
     },
     {
@@ -494,7 +454,7 @@
         "\n",
         "# Save converted dataframe as csv file for easier later access of converted data\n",
         "os.makedirs(\"outputs/data\", exist_ok=True)\n",
-        "df_converted.to_csv(\"outputs/data/Android_Malware_converted.csv\", index=False)\n",
+        "df_converted.to_csv(Path.cwd().parent / \"outputs\" / \"data\" / \"Android_Malware_converted.csv\", index=False)\n",
         "\n",
         "print(\"✅ Saved converted dataframe as copy of original\")\n",
         "print(\"✅ Saved converted dataframe to outputs/data/\")"
@@ -511,7 +471,321 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "# Load Converted Dataset"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "In this section, the converted dataset is loaded for further analysis. It is set to df_converted to keep code clear and understandable. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Load converted dataset from outputs"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df_converted = pd.read_csv(Path.cwd().parent / \"outputs\" / \"data\" / \"Android_Malware_converted.csv\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "# Correlation Study"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "In this section,"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Run Spearman and Pearson's correlation with target variable Label_encoded and print top 10 correlations for analysis"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Spearman Correlation\n",
+        "corr_spearman = df_converted.corr(method='spearman')['Label_encoded'].sort_values(key=abs, ascending=False)[1:11]\n",
+        "print(\"📊 Top 10 Spearman correlations with Label_encoded:\")\n",
+        "print(corr_spearman)\n",
+        "\n",
+        "# Pearson Correlation\n",
+        "corr_pearson = df_converted.corr(method='pearson')['Label_encoded'].sort_values(key=abs, ascending=False)[1:11]\n",
+        "print(\"📊 Top 10 Pearson correlations with Label_encoded:\")\n",
+        "print(corr_pearson)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Select top variables to explore further"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "top_n = 5\n",
+        "vars_to_explore = list(set(corr_pearson[:top_n].index.to_list() + corr_spearman[:top_n].index.to_list()))\n",
+        "print(\"🔎 Variables to explore further based on correlation:\")\n",
+        "print(vars_to_explore)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Explore Distributions by Target"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "In this section, "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def plot_numerical(df, col, target_var):\n",
+        "    plt.figure(figsize=(8, 5))\n",
+        "    sns.histplot(data=df, x=col, hue=target_var, kde=True, element=\"step\")\n",
+        "    plt.title(f\"{col}\", fontsize=20, y=1.05)\n",
+        "    plt.show()\n",
+        "\n",
+        "target_var = 'Label_encoded'\n",
+        "\n",
+        "# Subset dataframe for EDA\n",
+        "df_eda = df_converted[vars_to_explore + [target_var]]\n",
+        "\n",
+        "# Plot each variable\n",
+        "for col in vars_to_explore:\n",
+        "        plot_numerical(df_eda, col, target_var)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Explore Data Quality"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "In this section, "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Check for missing values per column"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "missing = df_converted.isnull().sum()\n",
+        "print(\"Missing values per column:\\n\", missing[missing > 0] if missing.any() else \"No missing values!\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Check for Outliers using IQR Method"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def detect_outliers_iqr(series):\n",
+        "    Q1 = series.quantile(0.25)\n",
+        "    Q3 = series.quantile(0.75)\n",
+        "    IQR = Q3 - Q1\n",
+        "    lower_bound = Q1 - 1.5 * IQR\n",
+        "    upper_bound = Q3 + 1.5 * IQR\n",
+        "    outliers = series[(series < lower_bound) | (series > upper_bound)]\n",
+        "    return outliers.count()\n",
+        "\n",
+        "print(\"\\nOutliers detected per numeric column (IQR method):\")\n",
+        "numeric_cols = df_converted.select_dtypes(include=['number']).columns\n",
+        "outliers_count = {col: detect_outliers_iqr(df_converted[col]) for col in numeric_cols}\n",
+        "for col, count in outliers_count.items():\n",
+        "    print(f\"{col}: {count} outliers\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Check Skewness for numeric features"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "skewness = df_converted[numeric_cols].skew()\n",
+        "print(\"\\nSkewness per numeric column:\")\n",
+        "print(skewness)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Check Distribution for selected numeric features"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def plot_distributions_fast(df, cols, n_cols=3):\n",
+        "    plt.figure(figsize=(15, 5 * ((len(cols) + n_cols - 1) // n_cols)))\n",
+        "    for i, col in enumerate(cols, 1):\n",
+        "        plt.subplot((len(cols) + n_cols - 1) // n_cols, n_cols, i)\n",
+        "        sns.histplot(df[col], bins=30, kde=False)  # KDE disabled and bins limited\n",
+        "        plt.title(f'Distribution of {col}')\n",
+        "    plt.tight_layout()\n",
+        "    plt.show()\n",
+        "\n",
+        "# Plot only top 5 numeric features to save time\n",
+        "plot_distributions_fast(df_converted, numeric_cols[:5])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Check Class Balance"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "print(\"\\nClass distribution (target variable):\")\n",
+        "print(df_converted['Label_encoded'].value_counts(normalize=True))\n",
+        "sns.countplot(x='Label_encoded', data=df_converted)\n",
+        "plt.title('Class Distribution')\n",
+        "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "* The class distribution shows that the dataset is imbalanced with the Benign (3) class being underrepresented. \n",
+        "\n",
+        "* This is important to keep in mind and might need adjusting later to avoid affecting the model performance negatively and prevent correctly identifying the benign class."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Updated Pandas Profiling Report"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "In this section, an updated version of the Pandas Profiling report is created to allow for comparison between reports after preparing and changing the dataframe."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Import ydata_profiling and create and save Pandas Profile Report"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Import Library\n",
+        "from ydata_profiling import ProfileReport\n",
+        "\n",
+        "# Create Profiling Report\n",
+        "profile = ProfileReport(df=df_converted, minimal=True)\n",
+        "profile.to_notebook_iframe()\n",
+        "\n",
+        "# Save Report in Outputs Folder (create if not existing)\n",
+        "os.makedirs(\"outputs/eda\", exist_ok=True)\n",
+        "profile.to_file(Path.cwd().parent / \"outputs\" / \"eda\" / \"EDA_Report_converted.html\")"
       ]
     },
     {
